--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "qs": "^6.9.1",
     "view-design": "^4.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
