--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
   "editor.insertSpaces": true,
   "editor.detectIndentation": false,
   "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": true,
   "vetur.format.options.tabSize": 2,
   "vetur.format.defaultFormatter.html": "js-beautify-html",
@@ -16,18 +19,5 @@
   "prettier.singleQuote": true,
   "prettier.semi": false,
   "eslint.alwaysShowStatus": true,
-  "eslint.autoFixOnSave": true,
-  "eslint.validate": [{
-      "language": "vue",
-      "autoFix": true
-    },
-    {
-      "language": "html",
-      "autoFix": true
-    },
-    {
-      "language": "javascript",
-      "autoFix": true
-    }
-  ],
+  "eslint.validate": ["vue", "html", "javascript"],
 }
