--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,10 @@
 {
-  "editor.tabSize": 2,
-  "editor.insertSpaces": true,
-  "editor.detectIndentation": false,
-  "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
-  "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": true,
-  "vetur.format.options.tabSize": 2,
-  "vetur.format.defaultFormatter.html": "js-beautify-html",
-  "vetur.format.defaultFormatter.js": "vscode-typescript",
-  "vetur.format.defaultFormatterOptions": {
-    "js-beautify-html": {
-      "wrap_attributes": "force-expand-multiline"
+    "editor.tabSize": 4,
+    "editor.formatOnSave": true,
+    "vetur.validation.template": false,
+    "eslint.format.enable": true,
+    "eslint.validate": ["html", "javascript", "vue"],
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
     }
-  },
-  "prettier.tabWidth": 2,
-  "prettier.singleQuote": true,
-  "prettier.semi": false,
-  "eslint.alwaysShowStatus": true,
-  "eslint.validate": ["vue", "html", "javascript"],
 }
