--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
     "@vue/cli-plugin-unit-jest": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
     "babel-plugin-import": "^1.8.0",
+    "compression-webpack-plugin": "^5.0.0",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-iview": "^2.0.0",
+    "sass-resources-loader": "^2.0.3",
     "vue-template-compiler": "^2.6.10"
   },
   "config": {
